# autobizlab_project

./: README.md  docker-compose.yml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20250511_a001_initial_bootstrap.py  20260212_totp_admin.py
backend/app/: config.py  main.py
backend/app/core/: database.py  http_errors.py  security.py  telegram.py
backend/app/models/: __init__.py  admin.py  auth_user.py  behavior.py  lead.py  portfolio.py
backend/app/routes/: admin.py  auth.py  leads.py  portfolio.py  public_options.py
backend/app/services/: __init__.py  upload_image_security.py
backend/tests/: conftest.py  test_http_errors.py  test_security_tokens.py
docs/ops/: postgres-backups.md
frontend/: index.html  robots.txt  sitemap.xml
frontend-src/: Dockerfile  index.html  lighthouserc.cjs  nginx.conf  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js
frontend-src/e2e/: admin-login.spec.js  landing-lead.spec.js
frontend-src/en/: index.html
frontend-src/public/: robots.txt
frontend-src/src/: App.jsx  main.jsx
frontend/enquire/: index.html
frontend/img/: КАК_ПОМЕНЯТЬ_ФОТО.txt
nginx/: nginx.conf
nginx/conf.d/: https.autobizlab.store.conf  https.autobizlab.store.sample  main.conf  registry.conf
nginx/snippets/: pgadmin-access.conf  security-headers-http.conf  security-headers-https.conf
nginx/ssl/: fullchain.pem  privkey.pem
pgadmin/: servers.json
registry/: config.yml
scripts/: renew-le-certs.sh
(+53 files in other folders)
